--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0025)https://rbloxscripts.com/ -->
 <html lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,14 +6,15 @@
 	<meta name="description" content="Roblox Scripts Hub &amp; Best Roblox Scripts Provider &amp; Free Roblox Scripts.">
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script type="text/javascript" async="" src="./index_files/analytics.js.download"></script><script async="" src="./index_files/js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163412431-17"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-163412431-11');
+  gtag('config', 'UA-163412431-17');
 </script>
+
 	<script type="text/javascript">
 $(document).ready(function() {
     $('a[data-href]').attr('href', $(this).attr('data-href'));
@@ -23,12 +23,10 @@ $(document).ready(function() {
 </script>
 
 
-    <title>RbloxScripts – Roblox Scripts For Free</title>
+    <title>RobloxScriptsPortal – Roblox Scripts For Free</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
 <link rel="dns-prefetch" href="https://s.w.org/">
-<link rel="alternate" type="application/rss+xml" title="RbloxScripts » Feed" href="https://rbloxscripts.com/feed/">
-<link rel="alternate" type="application/rss+xml" title="RbloxScripts » Comments Feed" href="https://rbloxscripts.com/comments/feed/">
 		<script type="text/javascript">
 			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/13.1.0\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/13.1.0\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/rbloxscripts.com\/wp-includes\/js\/wp-emoji-release.min.js?ver=5.8.4"}};
 			!function(e,a,t){var n,r,o,i=a.createElement("canvas"),p=i.getContext&&i.getContext("2d");function s(e,t){var a=String.fromCharCode;p.clearRect(0,0,i.width,i.height),p.fillText(a.apply(this,e),0,0);e=i.toDataURL();return p.clearRect(0,0,i.width,i.height),p.fillText(a.apply(this,t),0,0),e===i.toDataURL()}function c(e){var t=a.createElement("script");t.src=e,t.defer=t.type="text/javascript",a.getElementsByTagName("head")[0].appendChild(t)}for(o=Array("flag","emoji"),t.supports={everything:!0,everythingExceptFlag:!0},r=0;r<o.length;r++)t.supports[o[r]]=function(e){if(!p||!p.fillText)return!1;switch(p.textBaseline="top",p.font="600 32px Arial",e){case"flag":return s([127987,65039,8205,9895,65039],[127987,65039,8203,9895,65039])?!1:!s([55356,56826,55356,56819],[55356,56826,8203,55356,56819])&&!s([55356,57332,56128,56423,56128,56418,56128,56421,56128,56430,56128,56423,56128,56447],[55356,57332,8203,56128,56423,8203,56128,56418,8203,56128,56421,8203,56128,56430,8203,56128,56423,8203,56128,56447]);case"emoji":return!s([10084,65039,8205,55357,56613],[10084,65039,8203,55357,56613])}return!1}(o[r]),t.supports.everything=t.supports.everything&&t.supports[o[r]],"flag"!==o[r]&&(t.supports.everythingExceptFlag=t.supports.everythingExceptFlag&&t.supports[o[r]]);t.supports.everythingExceptFlag=t.supports.everythingExceptFlag&&!t.supports.flag,t.DOMReady=!1,t.readyCallback=function(){t.DOMReady=!0},t.supports.everything||(n=function(){t.readyCallback()},a.addEventListener?(a.addEventListener("DOMContentLoaded",n,!1),e.addEventListener("load",n,!1)):(e.attachEvent("onload",n),a.attachEvent("onreadystatechange",function(){"complete"===a.readyState&&t.readyCallback()})),(n=t.source||{}).concatemoji?c(n.concatemoji):n.wpemoji&&n.twemoji&&(c(n.twemoji),c(n.wpemoji)))}(window,document,window._wpemojiSettings);
@@ -1509,8 +1507,7 @@ var colibriData = [];
                 <!---->
                 <div data-colibri-id="11-f5" class="style-63 style-local-11-f5 position-relative h-element">
                   <!---->
-                  <div class="h-global-transition-all">© 2022 RbloxScripts. Created for free using WordPress and
-                    <a target="_blank" href="https://colibriwp.com/" rel="noopener">Colibri</a></div>
+                  <div class="h-global-transition-all">© 2022 RobloxScriptsPortal.</div>
                 </div>
               </div>
             </div>
